--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "helmet": "^7.0.0",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.4.0",
+    "mysql2": "^3.4.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
