atualizar .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-DB_HOST=db
+DB_HOST=localhost
 DB_ROOT_PASSWORD=root
-DB_USER=mysql
-DB_PASSWORD=mysql
+DB_USER=user
+DB_PASSWORD=pwd
 DB_NAME=recomkids
 DB_PORT=3306
+DB_DIALECT=mysql2
 
 NODE_DOCKER_PORT=3000
